# ChangeLog for sys-auth/pam_passwdqc
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_passwdqc/ChangeLog,v 1.13 2008/02/21 10:57:46 armin76 Exp $

  21 Feb 2008; Raúl Porcel <armin76@gentoo.org> pam_passwdqc-1.0.4.ebuild:
  alpha stable wrt #210695

  21 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  pam_passwdqc-1.0.4.ebuild:
  stable x86, bug 210695

  19 Feb 2008; nixnut <nixnut@gentoo.org> pam_passwdqc-1.0.4.ebuild:
  Stable on ppc wrt bug 210695

  19 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  files/pam_passwdqc-1.0.5-makefile.patch:
  Fix patch to also respect CFLAGS.

  19 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  pam_passwdqc-1.0.4.ebuild, pam_passwdqc-1.0.5.ebuild:
  Remove LICENSE dodoc.

*pam_passwdqc-1.0.5 (19 Feb 2008)

  19 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/pam_passwdqc-1.0.5-makefile.patch, +pam_passwdqc-1.0.5.ebuild:
  Version bump, new patch, the pre-stripped files were fixed already upstream,
  so it's just to respect LDFLAGS now.

*pam_passwdqc-1.0.4 (11 Jul 2007)

  11 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/pam_passwdqc-1.0.4-makefile.patch, -pam_passwdqc-1.0.2.ebuild,
  +pam_passwdqc-1.0.4.ebuild:
  Version bump, and solve a few issues like the ignored cflags and the
  pre-stripped binary.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  pam_passwdqc-0.7.5.ebuild, pam_passwdqc-1.0.2.ebuild:
  Convert to use elog.

  11 May 2006; Chris White <chriswhite@gentoo.org> metadata.xml:
  Japanese metadata.xml translation for bug #132587. Thanks to Yoshino-san for
  the translation.

  09 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Add pam-bugs email address as maintainer.

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> pam_passwdqc-0.7.5.ebuild:
  Mark 0.7.5 stable on alpha
