@@ -1,33 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_passwdqc/Attic/pam_passwdqc-0.7.5.ebuild,v 1.3 2007/01/05 20:49:18 flameeyes Exp $
-
-inherit pam
-
-DESCRIPTION="Password strength checking for PAM aware password changing programs"
-HOMEPAGE="http://www.openwall.com/passwdqc/"
-SRC_URI="http://www.openwall.com/pam/modules/pam_passwdqc/${P}.tar.gz"
-
-LICENSE="as-is"
-SLOT="0"
-KEYWORDS="alpha ~amd64 ~hppa ~mips ppc ~sparc x86"
-
-DEPEND=">=sys-libs/pam-0.72"
-
-src_compile() {
-	emake || die "emake failed"
-}
-
-src_install() {
-	dopammod pam_passwdqc.so
-
-	doman pam_passwdqc.8
-	dodoc README
-
-	echo
-	elog "To activate pam_passwdqc use pam_passwdqc.so instead"
-	elog "of pam_cracklib.so in /etc/pam.d/system-auth."
-	elog "Also, if you want to change the parameters, read up"
-	elog "on the man page."
-	echo
-}
